Fix Jar vulnerability and licensing
Upgraded Jar depdendencies in pom.xml

Change-Id: I0bc67d18a9b99f70676659c4ac78975dcf4d6972
Issue-ID: SO-537
Signed-off-by: byungwoojun<byung-woo.jun@ericsson.com>

--- a/bpmn/MSOCommonBPMN/pom.xml
+++ b/bpmn/MSOCommonBPMN/pom.xml
@@ -395,15 +395,25 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<!-- bwj: duplicated one
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		-->
+		<!-- bwj: duplicated
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>${httpclient.version}</version>
+		</dependency>
+		-->
+		<!-- bwj: added -->
+		<dependency>
+			<groupId>com.googlecode.libphonenumber</groupId>
+			<artifactId>libphonenumber</artifactId>
+			<version>8.9.1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
