Fix Jar vulnerability and licensing
Upgraded Jar depdendencies in pom.xml

Change-Id: I0bc67d18a9b99f70676659c4ac78975dcf4d6972
Issue-ID: SO-537
Signed-off-by: byungwoojun<byung-woo.jun@ericsson.com>

--- a/pom.xml
+++ b/pom.xml
@@ -434,7 +434,7 @@
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-jackson2-provider</artifactId>
-      <version>${resteasy.version}</version>
+      <version>3.1.0.Final</version>
     </dependency>
 	<dependency>
 		<groupId>org.hamcrest</groupId>
