--- a/pom.xml
+++ b/pom.xml
@@ -324,8 +324,8 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jboss-packaging-maven-plugin</artifactId>
         <version>2.2</version>
-        <!-- <configuration> <archive> <manifest> <addClasspath>true</addClasspath> 
-          </manifest> </archive> </configuration> Enable 'jboss-sar', etc., as a recoginized 
+        <!-- <configuration> <archive> <manifest> <addClasspath>true</addClasspath>
+          </manifest> </archive> </configuration> Enable 'jboss-sar', etc., as a recoginized
           maven packaging type -->
         <extensions>true</extensions>
       </plugin>
@@ -366,20 +366,23 @@
   <!-- *********************************************************************************************************** -->
   <!-- Dependencies -->
   <dependencies>
+    <!-- For CVE-2016-7051 CVE-2016-7051 CVE-2016-7051 CVE-2016-7051 CVE-2016-7051 -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.8.7</version>
+      <version>2.9.4</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-jaxb-annotations</artifactId>
       <version>2.4.0</version>
     </dependency>
+    <!-- For CVE-2017-17485 CVE-2018-5968 CVE-2017-7525 CVE-2017-15095 CVE-2017-17485 CVE-2018-5968 CVE-2017-7525 CVE-2017-15095 CVE-2017-17485 CVE-2018-5968 CVE-2017-7525 -->
+    <!-- CVE-2017-15095 CVE-2017-17485 CVE-2018-5968 CVE-2017-7525 CVE-2017-15095 CVE-2017-17485 CVE-2018-5968 -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.8.7</version>
+      <version>2.9.5</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -529,11 +532,29 @@
       <version>${resteasy.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- For CVE-2016-1000031 -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.3</version>
+    </dependency>
+    <!-- For CVE-2017-5929 -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.1.11</version>
+    </dependency>
+    <!-- For CVE-2014-0225 CVE-2015-5211 -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>4.3.14.RELEASE</version>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
       <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-      <!-- force use of version 4.5 everywhere in transient deps, aligned 
+      <!-- force use of version 4.5 everywhere in transient deps, aligned
         on WildFly 10 version -->
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
