Fix library CVEs in SO Fix additional CVEs:
commons-fileupload 1.3.3
  For CVE-2016-1000031
logback 1.1.11
  For CVE-2017-5929
springframework 4.3.14.RELEASE
  For CVE-2014-0225 CVE-2015-5211

Issue-ID: SO-579

Change-Id: If166892639ca0ddde8421d136803a5b068261413
Signed-off-by: chenying83 <chenying83@huawei.com>

--- a/pom.xml
+++ b/pom.xml
@@ -529,6 +529,24 @@
       <version>${resteasy.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- For CVE-2016-1000031 -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.3</version>
+    </dependency>
+    <!-- For CVE-2017-5929 -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.1.11</version>
+    </dependency>
+    <!-- For CVE-2014-0225 CVE-2015-5211 -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>4.3.14.RELEASE</version>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
